Update index.html with sample

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 				document.getElementById('boxescontentwrapper'+whichcard).appendChild(newcontent);
 			}
 		}
+
+		
+		//fillcontents(0,"Hello! I am a card.",["and","we","are","the","contents"])
 	</script>
 </body>
 </html>
